--- a/app/views/pages/faxian.scala.html
+++ b/app/views/pages/faxian.scala.html
@@ -1,77 +1,83 @@
-@(user:Option[models.user.User],page:models.Page[models.goods.Goods],cate:String,tag:String,tags:List[models.tag.Tag] )
+@(user:Option[models.user.User],page:models.Page[(models.user.User,models.goods.Goods)],cate:String,tag:String,tags:List[models.tag.Tag],s:Int)
 @views.html.template(
 user,
 nav=cate,
 title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱生活"
 )(css="/assets/css/template/faxian.css") {
-<div class="container" id="find">
+<div class="container" id="faxian">
     <div class="tag-list clearfix" id="J_tags">
              <dl class="clearfix">
                  <dt class='title @if(cate=="好玩意"){fs30}else{fs40} '>
-                     <a href='@controllers.routes.Pages.find(cate,"tag",1)'>@cate</a>
+                     <a href='@controllers.routes.Pages.faxian(cate,"tag",1,1)'>@cate</a>
                  </dt>
                  <dd>
                      @for(t<-tags){
-                     <a class='tag @if(t.name==tag){curr}' href="@controllers.routes.Pages.find(cate,t.name,1)">@t.name</a>
+                     <a class='tag @if(t.name==tag){curr}' href='@controllers.routes.Pages.faxian(cate,t.name,1,1)'>@t.name</a>
                      }
-
                  </dd>
              </dl>
-
-
-
     </div>
 
-    <!--标签 组 end-->
-    <!-- <div class="goods-title" id="J_GoodsTitle">
-            <div class="sort fl ml15">
-                <a class="on" href="" title="热门">热门</a>-
-                <a href="" title="最新">最新</a>-
-                <a href="" title="达人喜欢">达人喜欢</a>
-            </div>
-
-        </div>-->
-
-  <div class="goods-wall s1024" id="J_GoodsWall">
-    <div class="section">
-
-        @for((goods,i)<-page.items.view.zipWithIndex) {
-
-        <div class="goods small @if((i+1)%4==0){last} ">
-            <div class="goods-pic">
-                <a class="pic-link" href="@controllers.routes.Goods.view(goods.id.get)" title="@goods.name" target="_blank">
-                    <img src='@(goods.pic+"_210x210.jpg")' width="210" height="210" title="@goods.name" alt="@goods.name" />
-                </a>
-                <a  class="ilike-m" href="javascript:;" data-proimgsrc="@goods.pic" data-prourl="@controllers.routes.Goods.view(goods.id.get)" data-proname="@goods.name" data-type="0" data-proid="@goods.id.get">
-                    <i></i>
-                    <span class="ilikeCount" data-val="@goods.loveNum">喜欢(@goods.loveNum)</span>
-                </a>
-            </div>
-            <div class="goods-title ofh">
-                @goods.name
-            </div>
-            <div class="goods-stat">
-                <span class="mr10 like-count">@goods.loveNum</span>
-
-                @if(goods.promotionPrice.isEmpty){
-                <span>￥@goods.price</span>
-                }else{
-                @if(goods.price!=goods.promotionPrice.get){
-                <span style="text-decoration: line-through">￥@goods.price</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span>￥@goods.promotionPrice</span>
-                }else{  <span>￥@goods.price</span> }
-                }
-            </div>
-            <p class="goods-des">
-                @goods.intro
-            </p>
-
+    <section class="filter-wrap clearfix">
+        <h2>@cate @if(tag != "tag"){&nbsp;•&nbsp;@tag}</h2>
+        <div class="goods-filter">
+            <a type="list_default"   href='@controllers.routes.Pages.faxian(cate,tag,1,1)' @if(s==1){ class="current" } ><span>推荐</span></a>
+            <a type="list_new_most" href='@controllers.routes.Pages.faxian(cate,tag,2,1)'  @if(s==2){class=" current"}><span>最新</span></a>
+            <a type="list_hot_most"  href='@controllers.routes.Pages.faxian(cate,tag,3,1)'  @if(s==3){class=" current"}><span>最热</span></a>
         </div>
+        <i></i>
+    </section>
 
-        }
-    </div>
+    <section class="goods-contents clearfix">
+        <div class="goods-list clearfix" id="J_GoodsWall">
+            @for(((user,goods),i)<-page.items.view.zipWithIndex) {
+            <div class="goods-item @if((i+1)%4==0){last}">
+                <div class="pic" style='height:210px '>
+                    <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank">
+                        <img width="210px" alt="@goods.name" title="@goods.name" src="@goods.pic" >
+                    </a>
+                    <a  href="@controllers.routes.Goods.view(goods.id.get)" class="goods_title">@goods.name</a>
 
-</div>
+                </div>
+                <div class="goods-wrap">
+                     <div class="price">
+                         <span>￥@goods.price</span>
+                         <div class="like-state">
+                             <a rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get">
+                                 <i class="ico-likes"  title="喜欢"></i>
+                             </a>
+                             <div class="like-num">
+                                 <dl class="J_scrollUp" style="top: 0px;">
+                                     <dd class="J_FavorNum" data-val="@goods.loveNum">@goods.loveNum</dd>
+                                     <dd>+1</dd>
+                                 </dl>
+                             </div>
+                         </div>
+                     </div>
+                    <div class="user-comment">
+                        <div class="comment clearfix">
+                            <!-- 用户评论 -->
+                            <div class="user-list">
+
+                                    <div class="like-user">
+                                        <a class="fl" href="@controllers.users.routes.Users.home(user.id.get)"><img class="avt32 fl" src="@user.pic" alt="@user.name" width="30" height="30"></a>
+                                        <div class="info">
+                                            <a class="go-to-comment" href="@controllers.routes.Goods.view(goods.id.get)#J_CommentTxa" target="_blank">评论</a>
+                                            <h3><a href="@controllers.users.routes.Users.home(user.id.get)" target="_blank">@user.name</a></h3>
+                                            <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank"><p>@goods.intro</p></a>
+                                        </div>
+                                    </div>
+                            </div>
+                            <!-- 用户评论 end -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             }
+        </div>
+    </section>
+
 
     <!--宝贝展示 end-->
      <div class="clear"></div>
@@ -82,14 +88,14 @@ title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱生活"
                 @if(num==page.currentPage){
                 <li><span>第 @num 页</span></li>
                 }else {
-                <li><a href="@controllers.routes.Pages.find(cate,tag,num)">第@num 页</a></li>
+                <li><a href='@controllers.routes.Pages.faxian(cate,tag,s,num)'>第@num 页</a></li>
                 }
                 }
             </ul>
 
             <span class="current">第 @page.currentPage 页</span>
             @if(page.currentPage != page.totalPages){
-            <a title="翻翻下一页" href="@controllers.routes.Pages.find(cate,tag,page.currentPage+1)" class="next">翻翻下一页&gt;</a>
+            <a title="翻翻下一页" href='@controllers.routes.Pages.faxian(cate,tag,s,page.currentPage+1)' class="next">翻翻下一页&gt;</a>
               }
         </div>
     </div>
@@ -101,7 +107,7 @@ title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱生活"
 }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/goods/goods.faxian,app/goods/goods.favor');
+        init.load('app/goods/goods.faxian,app/goods/goods.favor.new');
     });
 </script>
 }
